2003-01-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* pp/oprofpp.cpp: more use of bfd_vma

2003-01-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/Makefile.am: fix include dir
	* libdb/db_test.c: don't assume than sizeof(struct opd_header) == 128

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: fix for 64 bits.

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libabi/abi.cpp:
	* libabi/op_import.cpp: broken by my last change in libdb.

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>

	* db/db_hash.h: do_hash() use db_key_t as parameter

2003-01-04  John Levon  <levon@movementarian.org>

	* pp/op_time.cpp: suggest opcontrol --dump instead

	* utils/opcontrol: implement --start-daemon. Fix a number
	  of bugs

	* doc/oprofile.xml:
	* doc/oprofile.1.in: document --start-daemon

2003-01-03  Will Cohen  <wcohen@redhat.com>

	* daemon/oprofiled.c (opd_do_samples): Typecast to match
	  arguments.

See ChangeLog-2002 for earlier changelogs.