@@ -1,3 +1,7 @@
+2003-01-08  John Levon  <levon@movementarian.org>
+
+	* libop/op_type.cpp: support for ascii-string cpu types
+
 2003-01-08  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/op_bfd.cpp:
